[project]
name = "connected"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Martin Walsh", email = "1520570+martinwalsh@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "black>=24.2.0",
    "isort>=5.13.2",
    "ipdb>=0.13.13",
    "jinja2>=3.1.3",
    "pytest-mypy>=0.10.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/connected"]

[too.black]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
mypy_path = "stubs"
# check_untyped_defs = true
# ignore_missing_imports = false

[tool.isort]
profile = "black"
length_sort = true

[tool.pytest.ini_options]
norecursedirs = ["stubs"]
addopts = "--mypy"
filterwarnings = []
